# django-pycppext-vue-template

./: .gitignore  CMakeLists.txt  PyEx.cpp  api.yml  config.h  config.yml  cppcheckers.cpp  ex.py  main.cpp  main.py  pyex.pyi  readconfig.py  requirements.txt
checkers/: settings.py  urls.py
checkers_app/: urls.py  views.py
database/: database.py  models.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  apiAdapters.ts  utils.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: Login.vue  Register.vue
